# florida-weather-evals

./: .env.example  .gitignore  LICENSE  README.md  RESULTS.md  pyproject.toml  weather-eval-design.md
.github/workflows/: validate.yml
data/: fawn_stations.yaml  fawn_sync.json  scenarios.yaml
prompts/: natural_v1.txt  natural_v2.txt  statistical_v1.txt  statistical_v2.txt
results/anthropic-seasonal/: by_prompt_variant.csv  by_scenario.csv  by_season.csv  by_stratum.csv  manifest.json  predictions.jsonl  scenarios_snapshot.yaml  summary.json
results/demo/: by_prompt_variant.csv  by_scenario.csv  by_season.csv  by_stratum.csv  manifest.json  predictions.jsonl  summary.json
results/openai-seasonal/: by_prompt_variant.csv  by_scenario.csv  by_season.csv  by_stratum.csv  manifest.json  predictions.jsonl  summary.json
scripts/: compare_fable.py  download_fawn_zips.py  export_frame.py  generate_demo_predictions.py  inspect_summary.py  inspect_sync.py  power_analysis.py  sync_fawn_targets.py
src/: fawn_sync.py  run_eval.py  schema.py  score.py  validate_scenarios.py
src/providers/: anthropic_provider.py  base.py  openai_provider.py
